--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 <li><a href="#">Contribute </a></li>
                 <li><a href="#">Request early access </a></li>
             </ul>
+
         </div>
     </header>
     <main>
@@ -41,18 +42,107 @@
         <section class="second">
             <div class="second-part">
                 <h2>Reimagining what it means to work</h2>
-                <p>Teams and communities using Open Enterprise fundamentally unlock a reality of work that reimagines how people engage in economic opportunity, meeting the demands and expectations of a modern organization.</p>
-                
+                <p>Teams and communities using Open Enterprise fundamentally unlock a reality of work that reimagines
+                    how people engage in economic opportunity, meeting the demands and expectations of a modern
+                    organization.</p>
+
             </div>
             <div class="second-part-imgs">
-                <div class="image-1"></div>
-                <div class="image-2"></div>
-                <div class="image-3"></div>
+                <div class="image-1 image">
+                    <img src="./assets/images/workforce.svg" alt="Modern workforce" />
+                    <h2>Modern workforce</h2>
+                    <p>Multistakeholder governance aligns employees with the organization’s wider community.</p>
+                </div>
+                <div class="image-2 image">
+                    <img src="./assets/images/design.svg" alt="Meritocratic by design" />
+                    <h2>Meritocratic by design</h2>
+                    <p>Tokenized ownership aligns deeply committed individuals with the organization’s success.</p>
+                </div>
+                <div class="image-3 image">
+                    <img src="./assets/images/resilience.svg" alt="Engineered for resilience" />
+                    <h2>Engineered for resilience</h2>
+                    <p>Open Enterprise supports best practices in sociocratic management.</p>
+                </div>
             </div>
 
+            <div class="part-3">
+
+                <div class="futureInfo">
+                    <img src="./assets/images/Icon.svg" alt="Icon" />
+                    <h2>Kickstart an organization with your co-founders</h2>
+                    <p>It’s the early days, you just had a long conversation with two friends about a meaningful
+                        challenge that you’re all passionate about and have a potential solution for. You’re ready to
+                        embark the startup journey.</p>
+
+                </div>
+                <div class="membersWidget">
+                    <span>Members</span>
+                    <div class="dillon">
+                        <img src="./assets/images/dillon.svg" alt="Dillon Kydd" />
+                        <div class="values">
+                            <h2>Dillon Kydd </h2>
+                            <p>100 shares</p>
+                        </div>
+
+                    </div>
+                    <div class="anna">
+                        <img src="./assets/images/anna.svg" alt="Anna Olsen" />
+                        <div class="values">
+                            <h2>Anna Olsen </h2>
+                            <p>100 shares</p>
+                        </div>
+
+                    </div>
+                    <div class="kas">
+                        <img src="./assets/images/kas.svg" alt="Kas Moss" />
+                        <div class="values">
+                            <h2>Kas Moss </h2>
+                            <p>100 shares</p>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div class="part-4">
+                <div class="jassir">
+                    <div class="something">
+                    <img src="./assets/images/jassir.svg" alt="Jassir Jonis" />
+                    <div class="values">
+                        <h2>Jassir Jonis </h2>
+                        <p>Pre-seed angel investor</p>
+                    </div>
+                </div>
+                    <p>Hey guys, love what you’re doing and I’m convinced that together we’ll achieve amazing things.
+                    </p>
+                    <div class="commit-shares">
+                        <div class="commit">
+                            <span>Commit</span>
+                            <h3>10,000 dai</h3>
+                        </div>
+                        <div class="shares">
+                            <span>shares</span>
+                            <h3>20</h3>
+                        </div>
+                    </div>
+                    <button>Go to vote</button>
+                </div>
+
+                <div class="LikefutureInfo">
+
+                    <img src="./assets/images/ellipse.svg" alt="Icon" />
+                    <h2>Onboard users, investors and advisors as you grow</h2>
+                    <p>You’ve bootstrapped and delivered an MVP, and some investors and advisors are interested in
+                        having a chat with you. As an Open Enterprise, you can onboard them seamlessly into your digital
+                        organization and align them with your success.</p>
 
 
+                </div>
+            </div>
         </section>
+
     </main>
 
 
