--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/3efe5c9486.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./assets/styles/main.css" />
     <title>Landing Page</title>
 </head>
@@ -20,12 +21,14 @@
         <div class="navbar">
             <ul>
                 <li><a href="#">Why Open Enterprise </a></li>
-                <li><a href="#">Features </a></li>
+                <li><a href="#">Features </a>
+                </li>
                 <li><a href="#">Contribute </a></li>
                 <li><a href="#">Request early access </a></li>
             </ul>
 
         </div>
+        <button class="hamburger-menu"><i class="fa-solid fa-bars"></i></button>
     </header>
     <main>
         <section class="first">
@@ -260,7 +263,7 @@
     </main>
     <footer>
         <div class="div-logo">
-
+            
             <h2>Open Enterprise</h2>
         </div>
         <nav>
